# solar-predictive-maintenance

./: .gitignore  GITHUB_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  test_run.py
docs/: FOULING_DETECTION.md
notebooks/: 01_eda.ipynb  02_training_example.ipynb
scripts/: run_cli.py
src/: __init__.py  fouling_detection.py
src/config/: settings.py
src/data_generation/: __init__.py  simulate_digital_twin.py
src/features/: __init__.py  feature_engineering.py
src/interfaces/: __init__.py  cli.py
tests/: __init__.py  test_data_generation.py  test_feature_engineering.py  test_fouling_detection.py  test_models.py
